z-index auf Navbar (fixed Überlappung)

--- a/src/css/nav-bar.css
+++ b/src/css/nav-bar.css
@@ -2,6 +2,7 @@
     position: sticky;
     top: 0;
     backdrop-filter: blur(5px);
+    z-index: 10;
 }
 
 .navbar {
